# karls_chatgpt_helpers

./: .gitignore  LICENSE.md  Makefile  README.md  chatgpt  chatgpt.py  gptshell  gptshell.py  pyproject.toml  setup.cfg  setup.py
karls_chatgpt_helpers/: Makefile  README.md  __init__.py  helpers.py  karls_chatgpt_helpers.py  setup.py
karls_chatgpt_helpers/chatgpt/: __main__.py
karls_chatgpt_helpers/gptshell/: __main__.py
src/: Makefile  __init__.py  karls_chatgpt_helpers.py
