[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "karls_chatgpt_helpers"
version = "0.0.5"
authors = [
    {name = "Karl", email = "support@lehenbauer.com"},
]
description = "Helper functions for chatgpt"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
"Homepage" = "https://github.com/lehenbauer/karls-chatgpt-helpers"
"Bug Tracker" = "https://github.com/lehenbauer/karls-chatgpt-helpers/issues"


[project.scripts]
chatgpt = "karls_chatgpt_helpers.chatgpt.__main__:main"
gptshell = "karls_chatgpt_helpers.gptshell.__main__:main"
