
[metadata]
name = karls_gpt_helpers
version = 0.0.5
author = Karl Lehenbauer
author_email = support@lehenbauer.com
description = 'chatgpt' program brings chatgpt into your Unix workflow. 'gptshell' is an interactive command line tool. karls_chatgpt_helpers package makes chatGPT conversations easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lehenbauer/karls_chatgpt_helpers
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    # Add your package dependencies here, e.g.
    # numpy>=1.21
    pyyaml
    openai

[options.entry_points]
console_scripts =
    chatgpt = scripts.chatgpt:__main__
    gptshell = scripts.gptshell:__main__

